# mathpresso

./: CMakeLists.txt  README.md  README.txt
MathPresso/: CHANGELOG.txt  MathPresso.cpp  MathPresso.h  MathPresso_AST.cpp  MathPresso_AST_p.h  MathPresso_Context_p.h  MathPresso_DOT.cpp  MathPresso_DOT_p.h  MathPresso_JIT.cpp  MathPresso_JIT_p.h  MathPresso_Optimizer.cpp  MathPresso_Optimizer_p.h  MathPresso_Parser.cpp  MathPresso_Parser_p.h  MathPresso_Tokenizer.cpp  MathPresso_Tokenizer_p.h  MathPresso_Util.cpp  MathPresso_Util_p.h  README.txt
MathPresso/MathPresso/: MathPresso.h  MathPresso_Context.cpp  MathPresso_DOT.cpp  MathPresso_JIT_p.h  MathPresso_Parser_p.h  MathPresso_Util_p.h
MathPresso/Scripts/: configure-linux-debug.sh  configure-linux-release.sh  configure-msvs2005-release.bat  configure-msvs2010-release.bat
MathPresso/Test/: evaluator.cpp  exptest.cpp
Scripts/: configure-mingw-debug.bat  configure-mingw-release.bat  configure-msvs2005-debug.bat  configure-msvs2010-debug.bat
Test/: exptest.cpp
